--- a/src/Components/DashBoard/AIAssistant.css
+++ b/src/Components/DashBoard/AIAssistant.css
@@ -15,8 +15,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 43px;
-    height: 43px;
+    width: 46px;
+    height: 42px;
     position: absolute;
     border: none;
     border-radius: 0%;
@@ -24,12 +24,18 @@
     right: 0%;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
+    background-color: #000925;
 }
 
 #sendit img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 75%;
+    max-height: 75%;
     object-fit: cover;
+}
+
+#sendit:hover{
+    background-color: #ff8800;
+    cursor: pointer;
 }
 
 .assistant {
