--- a/src/Components/Home/Authentication.css
+++ b/src/Components/Home/Authentication.css
@@ -75,7 +75,7 @@ input[type="password"]:focus {
   padding: 10px;
   margin-bottom: 15px;
   color: white;
-  border: 2px solid black;
+  border: 1px solid black;
   border-radius: 10px;
   font-size: 1rem;
   cursor: pointer;
@@ -91,13 +91,14 @@ input[type="password"]:focus {
 /* New style for Google Sign-In button */
 .google-signin {
   background-color: #ff8800; /* Google brand color */
-  border: 2px solid #000925;
+  border: 1px solid #000925;
+  font-weight: 550;
 }
 
 .google-signin:hover {
   background-color: silver;
   color:#000925;
-  font-weight: bold;
+  font-weight: 550;
 }
 
 #background-video {
